<resources>
    <plurals name="items">
        <item quantity="one">Item</item>
        <item quantity="other">Items</item>
    </plurals>
    <plurals name="bag_wish_items">
        <item quantity="one">Wish</item>
        <item quantity="other">Wishes</item>
    </plurals>
    <plurals name="bag_items">
        <item quantity="one">Product</item>
        <item quantity="other">Products</item>
    </plurals>
    <string name="app_name">Saman</string>
    <string name="title_home">Home</string>
    <string name="title_store">Store</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_fav">Wish List</string>
    <string name="drawer_fav">Wish List</string>
    <string name="title_bag">Bag</string>
    <string name="title_my_bag">My Bag</string>
    <string name="title_settings">Settings</string>
    <string name="title_my_account">My Account</string>
    <string name="title_logout">Log Out</string>
    <string name="yes">Yes</string>
    <string name="guest_user">Continue as guest user</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="email_address">Email Address</string>
    <string name="email_hint">example@saman.com</string>
    <string name="password_hint">********</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="update">Update</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="no">No</string>
    <string name="OR">OR</string>
    <string name="Okay">Okay</string>
    <string name="ud_store">UD Store</string>
    <string name="upload_photos">Upload\nPhotos</string>
    <string name="dummy">Lige Brand Men Watches Automatic</string>
    <string name="write_here">Enter your messagee</string>
    <string name="feedback_here">Write your feedback here</string>
    <string name="search">Search</string>
    <string name="search_query">Search Field Empty, Please write something to search</string>
    <string name="swipe">Swipe</string>
    <string name="click">Click</string>
    <string name="back">Back</string>
    <string name="currency_omr">OMR</string>
    <string name="logout_message">Are you sure want to logout from the app?</string>
    <string name="login_message">Log in to use\npersonalized content</string>
    <string name="not_now">Not Now</string>
    <string name="logout">Log Out</string>
    <string name="contentDescription">Content Description</string>
    <string name="sign_up_agreement">By tapping Sign Up, you agree to our\n</string>
    <string name="gender_prompt">Choose a gender</string>
    <string name="subject_prompt">Select Subject</string>
    <string name="language_prompt">Select a language</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="order_cancel">Canceled by Customer</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="press_again">Please click back again to exit</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="report_issue">Problem With My Account</string>
    <string name="ask_help">Problem With My Orders</string>
    <string name="report_prodcut">Problem With Stores</string>
    <string name="report_store">General Inquiries</string>
    <string name="item_"># Items</string>
    <string name="flavor">Flavor</string>
    <string name="privacy">&#160;return policies&#160;</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="term">&#160;Terms and conditions &#160;</string>
    <string name="description">Description</string>
    <string name="specifications">Specifications</string>
    <string name="no_specifications">No Specifications</string>
    <string name="create_ticket">Create Ticket</string>
    <string name="submit">Submit</string>
    <string name="terms_agreed">I Agree To The Terms</string>
    <string name="character">Character</string>
    <string name="completing_process">Completing Process</string>
    <string name="please_wait">Please wait....</string>
    <string name="OMR">OMR</string>
    <string name="send">Send</string>
    <string name="shopping_cart">Shopping Bag</string>
    <string name="off">Off</string>
    <string name="drawer_cart">Shopping Bag</string>
    <string name="apply_coupon">Coupon</string>
    <string name="invalid_coupon">Invalid Coupon</string>
    <string name="already_apply">Your coupon is already applied</string>
    <string name="only_one_time_apply">One coupon can apply at one time</string>
    <string name="delivery_to">Delivery To</string>
    <string name="delivery_options">Delivery Options</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="pick_up_seller">Pick up for seller</string>
    <string name="promo">Enter promo code here</string>
    <string name="payment_type">Payment Type</string>
    <string name="we_accept">We Accept</string>
    <string name="place_order">Place Order</string>
    <string name="invoice">Invoice</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="downloaded_invoice">Invoice is downloaded successfully</string>
    <string name="price_to_pay">Price to pay</string>
    <string name="promo_saved">Discount</string>
    <string name="no_items_found">No items found!</string>
    <string name="no_product_found">No products found</string>
    <string name="no_wishitems_found">No items in the Wishlist!</string>
    <string name="no_items_customer_service">No tickets found</string>
    <string name="no_message_conversation">No conversation found</string>
    <string name="agreement_order">By placing your order you agree to our</string>
    <string name="cart_dummy">Mr. Jesus\n\nMusqat\n\nMusqat\n\nOman\n\n115\n\n77777</string>
    <string name="check_out_thank_you">Thank You For Your Order</string>
    <string name="check_out_email_msg">Please check your email for your confirmation</string>
    <string name="check_out">Order confirmation</string>
    <string name="check_out_success">Order Successful</string>
    <string name="order_cancel_msg">Do you really want to cancel Order?</string>
    <string name="order_total">Order Total</string>
    <string name="checkout_order_total">The total amount</string>
    <string name="order_reference">Order Reference</string>
    <string name="order_status">Order Status</string>
    <string name="checkout_order_status">Order Status</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="return_policy"><u>Return Policy</u></string>
    <string name="received">Received</string>
    <string name="Cancel_order_before_24h">Cancel Order (before 24h)</string>
    <string name="add_payment">Add Payment</string>
    <string name="add_new_card">Credit/Debit\n Card\nAdd New</string>
    <string name="add_new">Add New</string>
    <string name="add">Add</string>
    <string name="app_language">App Language Changed Successfully, please close the app and reopen it again</string>
    <string name="add_payment_message">You have no payment method</string>
    <string name="subtotal">Subtotal: </string>
    <string name="VAT">VAT  : </string>
    <string name="total">Total: </string>
    <string name="proceed">CHECKOUT</string>
    <string name="order_date">Order Date</string>
    <string name="invoice_date">Order Date</string>
    <string name="order_">Order #</string>
    <string name="delete">Remove</string>
    <string name="default_">Default</string>
    <string name="cancel">Cancel</string>
    <string name="product_added_in_bag">Product Added successfully, Check Your Bag</string>
    <string name="add_to_cart">Move To Bag</string>
    <string name="add_to_fav">Move To Wishlist</string>
    <string name="added_to_fav">Item Has Been Added to Your Wishlist</string>
    <string name="removed_from_fav">Item Removed from Your Wishlist</string>
    <string name="ask_remove_from_fav">Removed from Wishlist</string>
    <string name="remove_sure">Are you sure you want to remove this item from wishlist?</string>
    <string name="view_fav">View Wishlist</string>
    <string name="yeah">View Wishlist</string>
    <string name="add_to_bag">Added to bag</string>
    <string name="remove_from_bag">Do you really want to remove from bag?</string>
    <string name="removed_from_bag">Product Removed successfully</string>
    <string name="move_to_fav">Product moved to wish list successfully</string>
    <string name="best_rate">Best Rate</string>
    <string name="price_high">Price High</string>
    <string name="low_price">Price Low</string>
    <string name="new_in">New In</string>
    <string name="order_number">Order Number</string>
    <string name="categories">Categories</string>
    <string name="Done">Done</string>
    <string name="best_sell">Best Sell</string>
    <string name="sort_by">Sort By</string>
    <string name="Login_message">Log in with</string>
    <string name="Login">Log In</string>
    <string name="login_failed">Login Failed</string>
    <string name="dont_have_account">Don\'t Have Account?</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Sign_up_with">Sign Up with</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="Birthday">Date of birth</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="day">DD</string>
    <string name="day_missing">Please Select Day</string>
    <string name="month">MM</string>
    <string name="month_missing">Please Select Month</string>
    <string name="year">YYYY</string>
    <string name="year2">YY</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="year_missing">Please Select Year</string>
    <string name="select_country">Country Selection</string>
    <string name="select_country_req">Please Select Country</string>
    <string name="select_location">Select Location</string>
    <string name="address_hint">Oman, Street name, Building, Floor...</string>
    <string name="address_req">Address Required</string>
    <string name="have_account">Have Account?</string>
    <string name="dob_missing">Please Select Date Of Birth</string>
    <string name="code">Code</string>
    <string name="enter_countrycode">Please enter country code</string>
    <string name="change_password_message">Please enter old password to confirm and new password to change password</string>
    <string name="forgot_password_message">Please enter email to your reset password</string>
    <string name="reset_password_message">Please Enter token you received on email and enter new password to reset password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="apply">Apply</string>
    <string name="emphasis">Emphasis</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="conti">Continue</string>
    <string name="token">Token</string>
    <string name="reset">Reset</string>
    <string name="Stores">Stores</string>
    <string name="see_all">See All</string>
    <string name="reset_with_email">Email</string>
    <string name="reset_with_phone">Phone Number</string>
    <string name="select_reset_option">Reset Password</string>
    <string name="select_reset_option_message">Recover password with your accessible source</string>
</resources>