<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_c_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_store"
            android:title="@string/Stores" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_c_fav"
            android:title="@string/drawer_fav" />
        <item
            android:id="@+id/nav_bag"
            android:icon="@drawable/ic_c_bag"
            android:title="@string/drawer_cart" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_c_account"
            android:title="@string/title_my_account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/title_logout" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/Login" />

    </group>
</menu>