<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/delivery_to"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/iv_country_flag"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_camera" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_grey" />

            <RelativeLayout
                android:id="@+id/bag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_bag"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_bag_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/see_all"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/bag_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_bag_see_all"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

            </RelativeLayout>

            <EditText
                android:padding="15dp"
                android:hint="@string/promo"
                android:background="@drawable/ic_edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_address"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:textSize="12sp"/>

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_navigate_next"
                    android:contentDescription="@string/contentDescription"/>

            </LinearLayout>

            <TextView
                android:text="@string/cart_dummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/light_grey" />
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_options"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_up_seller"
                    android:textSize="12sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_navigate_next"
                    android:contentDescription="@string/contentDescription"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_type"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:textSize="12sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_navigate_next"
                    android:contentDescription="@string/contentDescription"/>

            </LinearLayout>

            <TextView
                android:text="@string/cart_dummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/light_grey" />

            <TextView
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/we_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:padding="10dp"
                    android:src="@drawable/ic_visa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:padding="10dp"
                    android:src="@drawable/ic_visa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/light_grey" />
            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/delivery_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/price_to_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button_place_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_button"
                android:text="@string/place_order"
                android:textAllCaps="false"
                android:textColor="#fff" />


            <TextView
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/agreement_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>