<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RelativeOverlap">

    <LinearLayout
        android:padding="15dp"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/pop_up_corners"
        android:orientation="vertical">

        <ImageView
            android:visibility="visible"
            android:layout_marginBottom="10dp"
            android:layout_gravity="right"
            android:id="@+id/iv_pop_up_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/ic_cross"
            android:tint="@color/black" />

        <TextView
            android:id="@+id/tv_pop_up_title"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_reset_option"
            android:textColor="@color/black" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tv_pop_up_message"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_reset_option_message"
            android:textColor="@color/black" />


        <Button
            android:layout_marginTop="10dp"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/button_select_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            android:text="@string/reset_with_phone"
            android:textAllCaps="false"
            android:textColor="#fff" />

        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/button_select_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_button"
            android:text="@string/reset_with_email"
            android:textAllCaps="false"
            android:textColor="#fff" />

    </LinearLayout>

</RelativeLayout>